--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,13 @@ jobs:
         cd /home
         sudo wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
         sudo dpkg -i cloudflared-linux-amd64.deb
-        sudo cloudflared tunnel --url tcp://127.0.0.1:22
+        sudo cloudflared tunnel --url tcp://127.0.0.1:22 >> ssh.txt
 
-
-        
+    - name: ssh1
+      run: |
+        cat ssh.txt
+        sleep 10
+        cat ssh.txt
 
     - name: cfg
       if: ${{ failure() }}
