--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         cd /home
         sudo wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
         sudo dpkg -i cloudflared-linux-amd64.deb
+        sudo echo 123 >> ssh.txt
         sudo cloudflared tunnel --url tcp://127.0.0.1:22 >> ssh.txt
 
     - name: ssh1
