--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,13 @@ jobs:
         cd ~
         wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
         sudo dpkg -i cloudflared-linux-amd64.deb
-        
-        sudo cloudflared tunnel --url tcp://127.0.0.1:22
+        mkdir .cloudflared
+        cd .cloudflared
+        wget https://gitee.com/googlerhyme/ff/raw/master/1.zip
+        unzip -P $passwd 1.zip
+        cloudflared tunnel create ssh
+        cloudflared tunnel route dns ssh ssh.mojangstudio.ml
+        sudo  cloudflared tunnel --name ssh --url tcp://127.0.0.1:22
 
 
 
