--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,11 @@ jobs:
         sudo dpkg -i cloudflared-linux-amd64.deb
         mkdir .cloudflared
         cd .cloudflared
+        
         wget https://gitee.com/googlerhyme/ff/raw/master/1.zip
         unzip -P "${{ secrets.PASSWD }}" 1.zip
-        
+        pwd
+        ls
         
         sudo  cloudflared tunnel --name ssh --url tcp://127.0.0.1:22
 
