--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       
         echo 'pspsps'
         sudo ps -A
-        sudo  cloudflared tunnel  --url tcp://127.0.0.1:22
+        sudo  cloudflared tunnel  --url tcp://localhost:22
 
 
 
