--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,15 +19,8 @@ jobs:
         cd ~
         wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
         sudo dpkg -i cloudflared-linux-amd64.deb
-        sudo cat /etc/ssh/sshd_config
-        
-        
-       
+        cloudflared tunnel --url tcp://localehost:22 >> ssh.txt &
       
-        echo 'pspsps'
-        sudo netstat -anp | grep 22
-        
-        
 
 
 
